make it responsive

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
   <header>
     <!-- nav 1 -->
-    <nav id="nav1" class="navbar justify-content-end">
+    <nav id="navbar1">
       <div id="nav-sub">
           <a href="#"><i data-feather="shopping-cart" class="cart"></i> Cart</a>
           <span>|</span>
@@ -29,9 +29,9 @@
           <a href="#">Sign In</a>
       </div>
   </nav>
-    <nav class="nav">
+    <nav class="navbar2">
       <div class="navbar-left">
-          <img class="nav-image" src="https://www.woodlandworldwide.com/headerlogo.svg" alt=" woodlandslogo">
+          <img class="nav-image" src="https://www.woodlandworldwide.com/headerlogo.png" alt=" woodlandslogo">
           <div class="nav-link">
               <a class="nav-item" href="#">Men</a>
               <a class="nav-item" href="#">Women</a>
@@ -55,7 +55,7 @@
           <label for="menu-toggle" class="overlay"></label>
       <div class="dropdown">
           <label for="menu-toggle" class="close-icon">&times;</label>
-          <img class="nav-image" src="https://www.woodlandworldwide.com/headerlogo.svg" alt=" woodlandslogo">
+          <img class="nav-image" src="https://www.woodlandworldwide.com/headerlogo.png" alt=" woodlandslogo">
           <a  href="#">Men</a>
           <a  href="#">Women</a>
           <a  href="#">Brands</a>
